<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/nastroiki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        app:title="@string/settings"
        app:iconTint="?attr/colorOnSurface"
        app:navigationIcon="@drawable/arrow_left_back"
        app:theme="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
        app:contentInsetStartWithNavigation="0dp"
        app:titleMarginStart="0dp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_dark_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:textSize="18sp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/dark_mode" />

    <ImageButton
        android:id="@+id/podelitsya"
        style="@style/SettingsNew"
        android:contentDescription="@string/share_app"


        android:src="@drawable/ic_share_"/>

    <ImageButton
        android:id="@+id/poddergka"
        style="@style/SettingsNew"
        android:contentDescription="@string/write_support"

        android:src="@drawable/ic_arrow_left" />

    <ImageButton
        android:id="@+id/soglashenie"
        style="@style/SettingsNew"
        android:contentDescription="@string/user_agreement"
        android:src="@drawable/ic_arrow_right"

        />

</LinearLayout>